--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   min-height: 100vh;
   font-family: sans-serif;
   margin-top: 300px;
+  min-width: 100vh;
 }
 
 
@@ -59,6 +60,15 @@ body {
 
 /* SITE HERADER PART */
 
+
+.header-part {
+  background-color: #2c2c2c;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 10000;
+}
+
 .site-header {
  border-right: 1px solid #828282;
  position: fixed;
@@ -94,6 +104,8 @@ body {
 }
 
 .header-nav {
+  position: fixed;
+  top: 50px;
   padding: 10px 0;
 }
 
@@ -170,17 +182,22 @@ body {
   padding: 6px 10px;
 }
 .main-part-main {
+  position: fixed;
+  top: 50px;
+  width: 100%;
   background-color: #fff;
-  padding: 1px 0;
+  border-left: 1px solid #e5e5e5;
 }
 .main-part-search {
   display: flex;
   align-items: center;
   width: 400px;
   padding: 8.5px 10px;
+  margin-left: 20px;
 }
 .main-part-search:hover {
   background-color: #474747;
+  border-radius: 7px;
 }
 
 .input-search {
@@ -204,8 +221,9 @@ body {
 }
 
 .main-part-item {
-  margin-left: 15px;
+  margin-left: 1px;
 }
+
 
 .main-part-btn {
   background: none;
@@ -213,16 +231,18 @@ body {
   cursor: pointer;
 }
 .main-part-btn:hover {
-  background: #000;
-  padding: 1.5px 2.5px;
+  background-color: #000;
+  padding: 5px 0px;
 }
 
 .main-part-btn-span {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+  font-weight: 400;
+  font-size: 10px;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
   background: #00d47a;
-  padding: 10px 14px;
+  padding: 8px 12px;
   color: #fff;
 }
 
@@ -232,7 +252,7 @@ body {
   color: #000;
   font-weight: 400;
   padding: 10px 20px;
-  border-bottom: 1px solid #474747;
+  border-bottom: 1px solid #e5e5e5;
   text-align: left;
 }
 
@@ -246,7 +266,7 @@ body {
   padding: 20px 12px;
   display: flex;
   align-items: center;
-  border: 1px solid #000;
+  border: 1px solid #e5e5e5;
   border-radius: 7px;
   margin-right: 30px;
   cursor: pointer;
@@ -283,21 +303,27 @@ body {
 /* MAIN FILES PART  */
 
 .main-files {
-  padding: 5px 20px;
+  padding: 10px 20px;
+  border-left: 1px solid #e5e5e5;
+  padding-bottom: 15px;
 }
 
 .main-files-btn {
   background: none;
   border: none;
   cursor: pointer;
+  padding: 3px 0;
 }
 .main-files-btn:nth-child(2) {
   margin-left: 10px;
 }
 
 .main-files-list {
+  width: 1400px;
   list-style: none;
   padding: 0 20px;
+  border-left: 1px solid #e5e5e5;
+
 }
 
 .main-files-item {
